Fix Individual Subject Page Color Contrast

--- a/static/css/components/chart.less
+++ b/static/css/components/chart.less
@@ -33,7 +33,7 @@
     -o-transform: rotate(-90deg);
     filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
     font-size: 10px;
-    color: @olive;
+    color: @dark-olive;
     text-transform: uppercase;
   }
   &Xaxis {
@@ -43,7 +43,7 @@
     width: 100%;
     text-align: center;
     font-size: 10px;
-    color: @olive;
+    color: @dark-olive;
     text-transform: uppercase;
   }
   &Zoom {
