--- a/static/css/components/widget-box.less
+++ b/static/css/components/widget-box.less
@@ -5,7 +5,7 @@
 .widget-box {
   .head {
     > div {
-      color: @olive !important;
+      color: @dark-olive !important;
       font-size: 10px;
     }
   }
